# colorization_benchmark

./: .gitmodules  _config.yml  colorize_images.py  index.markdown  pyproject.toml
assets/: main.scss
benchmark/multi_reference/BiSTNet/: footer.md  index.md
benchmark/multi_reference/deepremaster/: footer.md  index.md
benchmark/single_reference/BiSTNet/: footer.md  index.md
benchmark/single_reference/deepremaster/: footer.md  index.md
benchmark/single_reference/gray_to_colornet/: footer.md  index.md
benchmark/single_reference/pdnla_net/: footer.md  index.md
benchmark/single_reference/super_attention/: footer.md  index.md
benchmark/single_reference/transformer_for_image_colorization/: footer.md  index.md
benchmark/single_reference/unicolor/: footer.md  index.md
benchmark/unconditional/bigcolor/: footer.md  index.md
benchmark/unconditional/colorful_colorization/: footer.md  index.md
benchmark/unconditional/colorize_net/: footer.md  index.md
benchmark/unconditional/ddcolor/: footer.md  index.md
benchmark/unconditional/inst_colorization/: footer.md  index.md
benchmark/unconditional/let_there_be_color/: footer.md  (+1 more)
colorization_benchmark/: base_colorizer.py  run_benchmark.py
colorization_benchmark/model_wrappers/: base_colorizer.py  bigcolor.py  colorful_colorization.py  colorize_net.py  ddcolor.py  deep_remaster.py  inst_colorization.py  let_there_be_color.py  ntire23.py  pdnla_net.py  roma.py  super_attention.py  unicolor.py
colorization_benchmark/models/: deep_remaster.py
colorization_benchmark/utils/: chromaticity.py  templating.py
(+4 files in other folders)
