[tool.poetry]
name = "colorization-benchmark"
version = "0.1.0"
description = ""
authors = ["Dávid Komorowicz <david.komorowicz@uni-jena.de>"]
readme = "README.md"
packages = [{ include = "colorization_benchmark" }]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
scikit-image = "^0.22.0"
colour-science = "^0.4.4"
tqdm = "^4.66.0"
PyExifTool = "^0.5.6"
imageio = "^2.34"
gdown = "^5.1.0"
wget = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"